2006-09-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimp.h: formatting.

	* app/tools/gimptool.c (gimp_tool_message): use gimp_message() if
	the statusbar is not visible.

2006-09-28  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.[ch]: added gimp_tool_message() which uses
	the new statusbar messages.

	* app/tools/gimptool.c
	* app/tools/gimppainttool.c: use it instead of accessing the
	statusbar directly.

	* app/tools/gimptransformtool.c: use it instead of gimp_message().

2006-09-28  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c: some more cleanup.

2006-09-28  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite.h
	* app/composite/gimp-composite-generic.c
	* app/paint-funcs/paint-funcs-generic.h
	* app/paint-funcs/paint-funcs.c: added lots of const qualifiers,
	moved variables to local scopes.

	* app/base/pixel-processor.c: formatting.

2006-09-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_do): reverted previous
	change; copy_region() is needed here.

2006-09-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_do): removed a redundant
	call to copy_region().

2006-09-27  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpconvolvetool.c (gimp_convolve_tool_register):
	changed menu label to "Bl_ur / Sharpen" and shortcut to Shift+U.
	Fixes bug #356137. Use "Blur / Sharpen" for all strings.

	* app/tools/gimpdodgeburntool.c (gimp_dodge_burn_tool_register):
	changed strings from "Dodge/Burn" to "Dodge / Burn".

2006-09-26  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpclone.c
	* app/paint/gimpheal.c
	* app/paint/gimpperspectiveclone.c
	* app/tools/gimpblendtool.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimplevelstool.c: message review. Thanks to Bill.

2006-09-26  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimppaintcore.[ch]: added GError** parameter to
	GimpPaintCore::start().
